cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_Array algorithm.cpp)
add_executable(leetcode_225 daily/225.cpp)
add_executable(leetcode_299 daily/299.cpp)
add_executable(leetcode_2129 daily/2129.cpp)
add_executable(leetcode_2368 daily/2368.cpp)
add_executable(leetcode_2386 daily/2386.cpp)
add_executable(leetcode_2575 daily/2575.cpp)
add_executable(leetcode_2834 daily/2834.cpp)
